<resources>
    <string name="app_name">Drowser</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="untitled_app">Untitled app</string>

    <!-- Tab titles -->
    <string name="title_tab_will_drowse_apps">Drowse</string>
    <string name="title_tab_user_apps">User</string>
    <string name="title_tab_system_apps">System</string>
    <string name="title_tab_all_apps">All</string>

    <string name="toast_add_drowse">Added %s to list.\n\nWill drowse the app as soon as the screen turns off.</string>
    <string name="toast_remove_drowse">Removed %s from list.\n\nYou might need to open the app manually again for it to start working normally again.</string>

    <!-- Play/Pause -->
    <string name="snackbar_disabled_until">Disabled Drowser until %s</string>
    <string name="snackbar_reenabled">Re-enabled Drowser</string>
    <!-- zzz -->
    <string name="snackbar_zzz">Drowsing apps…</string>

    <!-- Prefs -->
    <string name="prefs_category_service">Service</string>
    <string name="pref_enable">Enabled</string>
    <string name="pref_drowse_foreground_app">Drowse foreground app</string>
    <string name="pref_drowse_foreground_app_summary">Drowse the app that is currently running in the foreground when the screen turns off.</string>
    <string name="pref_drowse_delay">Drowse delay</string>
    <string name="pref_drowse_delay_summary">Time to wait after screen turns off before drowsing apps. If the screen is turned back on before the timeout has expired, the apps <strong>won\'t</strong> be drowsed.\n\nCurrent value: %s.</string>

    <string name="prefs_category_notification">Notifications</string>
    <string name="pref_show_notification">Show notification</string>
    <string name="pref_show_notification_summary">Show a persistent notification to manage Drowse and to make sure it stays alive.</string>

    <string name="prefs_category_app_list">App list filters</string>
    <string name="pref_drowse_show_system_apps">Show system apps</string>
    <string name="pref_drowse_show_disabled_apps">Show disabled apps</string>

    <!-- Menu -->
    <string name="menu_button_add">Add</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_privacy_policy">Privacy Policy</string>
    <string name="menu_item_licenses">Licenses</string>
    <string name="menu_item_global_pause">Temporarily Disable…</string>
    <string name="menu_item_global_play">Re-enable…</string>
    <string name="menu_item_zzz">Drowse apps now</string>

    <!-- Licenses Activity -->
    <string name="licenses_about_libraries_text" translatable="false"><![CDATA[<br/><b>%s License</b><br/><br/>Copyright (c) 2018 Juan García Basilio<br/><br/>This app is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.<br/><br/>This app is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the <a href="http://www.gnu.org/licenses/">GNU General Public License</a> for more details.<br/><br/><b>Third-party libraries</b><br/><br/>Here is a list of the libraries used by this app. Tap on them for more information.]]></string>

    <!-- Add activity -->
    <string name="title_activity_add">Add apps</string>

    <!-- Excluded apps from locking -->
    <string name="drowse_candidates_section_title">Drowse candidates</string>
    <string name="non_drowse_candidates_section_title">Other apps</string>
    <string name="drower_candidates_empty_text">
        The apps listed here will be drowsed, i.e. force-killed every time the screen goes off.
        \n\n<b>BEWARE!</b> This is a very impolite way of closing apps. They might misbehave and/or you
        might lose data.
        \n\nJust tap on an app below to add it to this list. Tap on it again
        to remove it if you change your mind.
    </string>

    <string name="undo">UNDO</string>
    <string name="added_app">Added %s to list</string>
    <string name="removed_app">Removed %s from list</string>

    <!-- Notification -->
    <string name="notification_tap_to_open">Tap to open</string>
    <string name="notification_drowser_running">Drowser running</string>
    <string name="notification_persistent">Drowser persistent notification</string>
    <string name="notification_persistent_channel_description">This notification is used to keep Drowser alive in the background.</string>

    <!-- Root -->
    <string name="root_required">
        Sorry! Drowser needs root in order to run.
        \n\nYou need to root your device and/or grant root permissions to Drowser.
    </string>
    <!-- No root notification -->
    <string name="root_required_notification_title">No root detected</string>
    <string name="root_required_notification_description">Sorry! Drowser needs root in order to run.</string>
    <string name="root_required_notification_channel_name">Root required notification</string>
    <string name="root_required_notification_channel_description">Channel to notify when root is not enabled.</string>
    <!-- Pause and Timeouts -->
    <string name="timeout_no_timeout">no timeout</string>
    <string name="timeout_one_minute">1 minute</string>
    <string name="timeout_five_minutes">5 minutes</string>
    <string name="timeout_ten_minutes">10 minutes</string>
    <string name="timeout_thirty_minutes">30 minutes</string>
    <string name="timeout_one_hour">1 hour</string>
    <string name="timeout_two_hours">2 hours</string>
    <string name="timeout_infinity">indefinitely</string>

    <!-- I put this array here instead of in arrays.xml because it has to be translated. -->
    <string-array name="drowse_delay_entries">
        <item>No delay</item>
        <item>1 second</item>
        <item>5 seconds</item>
        <item>10 seconds</item>
    </string-array>

    <!-- Shortcuts -->
    <string name="shortcut_drowse_all">Drowse apps</string>

    <!-- pref id's -->
    <string name="pref_enabled_key" translatable="false">pref_enabled</string>
    <string name="pref_notification_key" translatable="false">pref_notification</string>
    <string name="pref_drowse_foreground_app_key" translatable="false">pref_drowse_foreground_app</string>
    <string name="pref_drowse_delay_key" translatable="false">pref_drowse_delay</string>
    <string name="pref_drowse_show_system_apps_key" translatable="false">pref_drowse_show_system_apps_key</string>
    <string name="pref_drowse_show_disabled_apps_key" translatable="false">pref_drowse_show_disabled_apps_key</string>
    <!-- automagic pref id's -->
    <string name="pref_request_root_access_key" translatable="false">pref_request_root_access</string>
    <string name="pref_disable_until_key" translatable="false">pref_disable_until</string>
    <string name="pref_last_disable_until_user_choice_key" translatable="false">pref_last_disable_until_user_choice</string>
</resources>
