<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
<PreferenceCategory
    android:key="prefs_category_service"
    android:title="@string/prefs_category_service">
    <SwitchPreferenceCompat
        android:key="@string/pref_enabled_key"
        android:title="@string/pref_enable"
        android:defaultValue="true" />
    <SwitchPreferenceCompat
        android:key="@string/pref_drowse_foreground_app_key"
        android:title="@string/pref_drowse_foreground_app"
        android:summary="@string/pref_drowse_foreground_app_summary"
        android:defaultValue="true" />
    <ListPreference
        android:key="@string/pref_drowse_delay_key"
        android:title="@string/pref_drowse_delay"
        android:summary="@string/pref_drowse_delay_summary"
        android:entries="@array/drowse_delay_entries"
        android:entryValues="@array/drowse_delay_values"
        android:defaultValue="1000" />
</PreferenceCategory>
<PreferenceCategory
    android:key="prefs_category_app_list"
    android:title="@string/prefs_category_app_list"
    android:dependency="@string/pref_enabled_key">
    <SwitchPreferenceCompat
        android:key="@string/pref_drowse_show_system_apps_key"
        android:title="@string/pref_drowse_show_system_apps"
        android:defaultValue="false" />
    <SwitchPreferenceCompat
        android:key="@string/pref_drowse_show_disabled_apps_key"
        android:title="@string/pref_drowse_show_disabled_apps"
        android:defaultValue="false" />
</PreferenceCategory>
<PreferenceCategory
    android:key="prefs_category_notification"
    android:title="@string/prefs_category_notification"
    android:dependency="@string/pref_enabled_key">
    <SwitchPreferenceCompat
        android:key="@string/pref_notification_key"
        android:title="@string/pref_show_notification"
        android:summary="@string/pref_show_notification_summary"
        android:defaultValue="true" />
</PreferenceCategory>
</PreferenceScreen>
