<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jarsilio.android.waveup.MainActivity" >
    <item
        android:id="@+id/menu_button_add"
        android:title="@string/menu_button_add"
        android:icon="@drawable/ic_add_white"
        android:orderInCategory="10"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_item_settings"
        android:title="@string/menu_item_settings"
        android:orderInCategory="50"
        app:showAsAction="never" />
    <item android:id="@+id/menu_item_privacy_policy"
        android:title="@string/menu_item_privacy_policy"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/menu_item_licenses"
        android:title="@string/menu_item_licenses"
        android:orderInCategory="150"
        app:showAsAction="never" />
</menu>
